@@ -109,4 +109,3 @@ QtView
 Toolbar_pimpl
 
 	- mathed symbols (*) 
-	- set() ?? 
