@@ -1,5 +1,13 @@
 2002-07-22  John Levon  <moz@compsoc.man.ac.uk>
 
+	* QCommandBuffer.C: probably compile fix
+
+	* QtView.C:
+	* Toolbar_pimpl.h:
+	* Toolbar_pimpl.C: remove dead code
+ 
+2002-07-22  John Levon  <moz@compsoc.man.ac.uk>
+
 	* lyx_gui.C: add exit() so we don't busy loop !
  
 2002-07-22  John Levon  <moz@compsoc.man.ac.uk>
